Shape key data in bmesh is wrong; access causes Windows-specific crashes #45976

Closed
opened 2015-09-01 10:52:06 +02:00 by nemyax · 8 comments

System Information
Windows 7, Windows XP

Blender Version
Broken: 2.75a
Worked: probably never

Short description of error
Shape key data in a bmesh contains incorrect values.
Also, simply iterating over the data items causes a crash on Windows (EXCEPTION_ACCESS_VIOLATION). Couldn't reproduce the crash on Linux.

Exact steps for others to reproduce the error
Run the script in the attached .blend file.

**System Information** Windows 7, Windows XP **Blender Version** Broken: 2.75a Worked: probably never **Short description of error** Shape key data in a bmesh contains incorrect values. Also, simply iterating over the data items causes a crash on Windows (EXCEPTION_ACCESS_VIOLATION). Couldn't reproduce the crash on Linux. **Exact steps for others to reproduce the error** Run the script in the attached .blend file.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nemyax

Added subscriber: @nemyax

Added subscriber: @mont29

Added subscriber: @mont29

No attached file?

Also, please check with the latest build from our buildbot.

No attached file? Also, please check with the latest build from [our buildbot](https://builder.blender.org/download).
Author

shapekey-bug.blend
Sorry about the missing file. I'll check the dev build.

[shapekey-bug.blend](https://archive.blender.org/developer/F229639/shapekey-bug.blend) Sorry about the missing file. I'll check the dev build.
Author

I'm getting the same crash with Blender-2.75.0-git.b3f4bf8.

I'm getting the same crash with Blender-2.75.0-git.b3f4bf8.

This issue was referenced by 1140238acf

This issue was referenced by 1140238acf31fba54e3a88b9519c8e8b46b19d59

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45976
No description provided.