Fix T45976: Crash accessing BMesh customdata

Layers returned from items() and values() could have an invalid index.